2007-03-18 Igor Zelmanovich <igorz@mainsoft.com>

	* VirtualPathUtilityTest.cs: new tests, removed dublicated test.

2007-03-18 Igor Zelmanovich <igorz@mainsoft.com>

	* VirtualPathUtilityTest.cs: new tests.

2007-03-15 Igor Zelmanovich <igorz@mainsoft.com>

	* VirtualPathUtilityTest.cs: new tests.

2007-03-06 Igor Zelmanovich <igorz@mainsoft.com>

	* StaticSiteMapProviderTest.cs: removed NotWorking attributes..

2007-01-15 Ilya Kharmatsky  <ilya -at- decode-systems.com>

	* VirtualPathUtilityTest.cs: fixed introduced by previous patch
	bug, which used not supported in mono's nunit function 
        'Assert.IsNotEmpty'

2007-01-15 Ilya Kharmatsky  <ilya -at- decode-systems.com>
	
	* VirtualPathUtility.cs : 
		- ToAbsoluteXXX (where XXX are numbers between 1-7) tests
		  transformed to WebTest - since the real-life scenarios 
		  for those tests are in web context.
		- Removed NotWorking attributes - fixed bugs in
		  VirtualPathUtility - GetDirectory and GetExtension, and
		  moving ToAbsoluteXXX test to web tests.
		- MakeRelative5 test has been splatted to 2 different tests 
		  - added MakeRelative6
		- Removed 'TARGET_JVM' directives

2006-12-12 Igor Zelmanovich <igorz@mainsoft.com>

	* StaticSiteMapProviderTest.cs: new tests added.

2006-12-12 Igor Zelmanovich <igorz@mainsoft.com>

	* StaticSiteMapProviderTest.cs: removed NotWorking attributes.

2006-12-12 Igor Zelmanovich <igorz@mainsoft.com>

	* VirtualPathUtilityTest.cs: new tests added.

2006-12-12 Igor Zelmanovich <igorz@mainsoft.com>

	* VirtualPathUtilityTest.cs: new tests added.

2006-12-11  Igor Zelmanovich   <igorz@mainsoft.com>

	* StaticSiteMapProviderTest.cs: added NotWorking attributes.

2006-12-05  Igor Zelmanovich   <igorz@mainsoft.com>

	* VirtualPathUtilityTest.cs: new tests added.

2006-11-29  Igor Zelmanovich   <igorz@mainsoft.com>

	* StaticSiteMapProviderTest.cs: fixed NunitWeb tests.

2006-11-05 Andrew Skiba <andrews@mainsoft.com>
